--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
 <body>
     <form id="formulario">
         <div class="output">
-            <input type="text" id="equacao" placeholder="Ex: (x+1)2" style="background: #fff;">
+            <input type="text" id="equacao" placeholder="Ex: (x+1)2" >
             <p id="resultado"></p>
         </div>
         <button class="span-two">AC</button>
         <button>DEL</button>
-        <button>(</button>
+        <button class="green">(</button>
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>)</button>
+        <button class="green">)</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
-        <button>+</button>
+        <button class="green">+</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>-</button>
+        <button class="green">-</button>
         <button>x</button>
         <button>y</button>
         <button>z</button>
-        <button type="submit" id="send">=</button>
+        <button type="submit" id="send" class="green">=</button>
         <button>a</button>
         <button>b</button>
         <button>c</button>
